# ChangeLog for media-gfx/gimp
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.180 2006/10/21 19:59:27 genstef Exp $

  21 Oct 2006; Stefan Schweizer <genstef@gentoo.org> gimp-2.3.12.ebuild:
  Fix build by unsetting AA like in 2.3.11, bug 151946

*gimp-2.3.12 (19 Oct 2006)

  19 Oct 2006; Hanno Boeck <hanno@gentoo.org> +gimp-2.3.12.ebuild:
  Version bump, no more versioned bins (we no longer have gimp-1.x), cleanup.

*gimp-2.3.11 (12 Sep 2006)

  12 Sep 2006; Hanno Boeck <hanno@gentoo.org> metadata.xml,
  +gimp-2.3.11.ebuild:
  Version bump and add myself to maintainers.

  10 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove brix from metadata.xml.

  08 Sep 2006; Thomas Cort <tcort@gentoo.org> gimp-2.2.12.ebuild:
  Stable on alpha.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> gimp-2.3.9.ebuild,
  gimp-2.3.10.ebuild:
  Add ~mips to KEYWORDS for 2.3.9 and 2.3.10.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> gimp-2.2.12.ebuild:
  Marked stable on mips.

  22 Aug 2006; Stephen P. Becker <geoman@gentoo.org> gimp-2.2.11-r1.ebuild:
  stable on mips, bug 139146

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> gimp-2.2.11-r1.ebuild,
  gimp-2.2.12.ebuild, gimp-2.3.9.ebuild, gimp-2.3.10.ebuild:
  Mark 2.2.12 stable on ia64 #139524

  11 Jul 2006; Jason Wever <weeve@gentoo.org> gimp-2.2.12.ebuild:
  Stable on SPARC wrt security bug #139524.

*gimp-2.3.10 (09 Jul 2006)

  09 Jul 2006; Henrik Brix Andersen <brix@gentoo.org> +gimp-2.3.10.ebuild:
  New development snapshot, fixes bug #139543.

  09 Jul 2006; Henrik Brix Andersen <brix@gentoo.org> gimp-9999.ebuild:
  Updated dependencies, thanks to Petr Novak in bug #139699.

  09 Jul 2006; Rene Nussbaumer <killerfox@gentoo.org> gimp-2.2.12.ebuild:
  Stable on hppa. See bug #139524.

  09 Jul 2006; Paul Varner <fuzzyray@gentoo.org> gimp-2.2.12.ebuild:
  Stable on x86 wrt security Bug #139524.
