@@ -1,0 +1,3 @@
+MD5 b150a726e1380ee0a6af342a9c0ebe80 gimp-2.3.13.tar.bz2 15855459
+RMD160 a12f99ceca3c55af03b04b6b16ef1266f31b1b02 gimp-2.3.13.tar.bz2 15855459
+SHA256 6cc35431735c9303721c0a99f63dc685be60e82c197800880cbbf861c5c498ae gimp-2.3.13.tar.bz2 15855459
